Initial commit of nf-core-cap with modules and tests

--- a/conf/base.config
+++ b/conf/base.config
@@ -10,6 +10,10 @@
 
 process {
 
+    // Set WORKFLOW_DIR for R scripts to find auxfuns.R
+    // This will be replaced with actual projectDir path by Nextflow
+    env.WORKFLOW_DIR = "$projectDir"
+
     // TODO nf-core: Check the defaults for all processes
     cpus   = { 1      * task.attempt }
     memory = { 6.GB   * task.attempt }
