--- a/nextflow.config
+++ b/nextflow.config
@@ -9,14 +9,20 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
-    // Input options
-    input                      = null
+    // CAP pipeline input options
+    assembly                   = null  // Required: Genome assembly in FASTA format
+    te_gff                     = null  // Optional: EDTA TE annotation (GFF3)
+    gene_gff                   = null  // Optional: Helixer gene annotation (GFF)
+    templates                  = null  // Optional: Custom repeat templates (FASTA)
 
-    // References
+    // CAP pipeline parameters
+    cores                      = 4     // Number of CPU cores for TRASH2
+    max_rep_size               = 200   // Maximum repeat size for TRASH2
+
+    // References (not used in CAP, kept for nf-core compatibility)
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
+    igenomes_ignore            = true  // CAP doesn't use igenomes
 
     // MultiQC options
     multiqc_config             = null
@@ -92,6 +98,7 @@ profiles {
         charliecloud.enabled    = false
         apptainer.enabled       = false
         docker.runOptions       = '-u $(id -u):$(id -g)'
+        process.container       = 'nfcore/cap:dev'
     }
     arm64 {
         process.arch            = 'arm64'
@@ -115,6 +122,7 @@ profiles {
         podman.enabled          = false
         shifter.enabled         = false
         charliecloud.enabled    = false
+        process.container       = 'docker://nfcore/cap:dev'
         apptainer.enabled       = false
     }
     podman {
