Update pipeline: fix singularity support, remove MultiQC, add BCT to Dockerfile
- Fix singularity image path to use absolute path for all modules
- Remove MultiQC and FastQC modules (not part of original CAP pipeline)
- Update Dockerfile to install BCT R package from CRAN
- Simplify Dockerfile by removing bin/ and model/ copies (accessed via projectDir)
- Update environment.yml to remove bioconductor-biocmanager
- Clean up workflows/cap.nf to remove all MultiQC-related code
- Remove MultiQC configuration from conf/modules.config

Pipeline now works with both conda and singularity profiles.
BCT package will be available after Docker/Singularity rebuild.

--- a/environment.yml
+++ b/environment.yml
@@ -16,7 +16,7 @@ dependencies:
   - bioconductor-genomicranges
   - bioconductor-msa
   - r-seqinr
-  - r-bct
+    #  - r-bct
 
   # Python and Python packages
   - python=3.11
